Add media breakpoints and 8px spacing helper classes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,8 @@
 @use 'abstracts/variables';
 @use 'abstracts/mixins';
 
+@use 'base/base';
 @use 'base/typography';
+@use 'base/spacing';
+
 @use 'vendors/normalize';
