Fix component imports

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -5,3 +5,18 @@ $breakpoints: (
   'md': 1024px,
   'lg': 1280px
 );
+
+// Colors
+// We'll want to namespace these by theme later
+$text--primary: #090422;
+$text--secondary: #cecdd3;
+$text--placeholder: #465968;
+
+$inactive: #cecdd3;
+$disabled: #f5f4fa;
+$background: #f7f8fa;
+
+$primary: #4263eb;
+$error: #fb4e4e;
+$warning: #f6a609;
+$success: #2ac769;
