--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,16 +4,12 @@
 @import url('https://fonts.googleapis.com/css?family=Barlow');
 
 :root {
-  --font-primary: 'Barlow';
-  --font-secondary: 'Input Sans';
-
-  /* set base values */
-  --text-base-size: 1em;
-  --text-scale-ratio: 1.2;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
   color: variables.$text--primary;
-  font-family: var(--font-primary);
-  font-size: var(--text-base-size);
+  font-family: variables.$font--secondary !important;
+  font-size: 1em;
 }
