Improve hot reloading, jigger fonts for better loading

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -24,3 +24,19 @@ $primary: #024dfd;
 $error: #fb4e4e;
 $warning: #f6a609;
 $success: #2ac769;
+
+$primary-101: #0035b0;
+$primary-100: #024dfd;
+$primary-80: #6680ee;
+$primary-60: #8a9df0;
+$primary-40: #acbbf3;
+$primary-20: #d0d8f5;
+$primary-10: #e3e7f7;
+$primary-5: #ebeef7;
+
+$grey-1: #090422;
+$grey-2: #465968;
+$grey-3: #f7f7f8;
+$grey-4: #cecdd3;
+$grey-5: #f7f8fa;
+$grey-6: #ebeef7;
