--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,7 +1,4 @@
-@use 'abstracts/variables';
-
-@import url('https://use.typekit.net/kuq1xhl.css');
-@import url('https://fonts.googleapis.com/css?family=Barlow');
+@use '../abstracts/variables';
 
 :root {
   -webkit-font-smoothing: antialiased;
