Update button styling

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -2,12 +2,12 @@
 
 $cuts: 8, 16, 24, 32, 40, 48;
 
-@mixin miter($i) {
+@mixin miter($i, $inner: false) {
   clip-path: polygon(
     0 0,
     100% 0,
-    100% calc(100% - #{list.nth($cuts, $i)}px),
-    calc(100% - #{list.nth($cuts, $i)}px) 100%,
+    100% calc(100% - #{list.nth($cuts, $i)}px + #{if($inner, 0.5px, 0px)}),
+    calc(100% - #{list.nth($cuts, $i)}px + #{if($inner, 0.5px, 0px)}) 100%,
     0 100%
   );
 }
