--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $inactive: #cecdd3;
 $disabled: #f5f4fa;
 $background: #f7f8fa;
 
+$white: #ffffff;
 $primary: #024dfd;
 $error: #fb4e4e;
 $warning: #f6a609;
