Use computed prop for classlist

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -30,6 +30,10 @@
     }
   }
 
+  &.disabled {
+    cursor: not-allowed;
+  }
+
   &.primary {
     &.hovered > div {
       background-color: variables.$primary-101;
