--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -41,3 +41,12 @@ $grey-3: #f7f7f8;
 $grey-4: #cecdd3;
 $grey-5: #f7f8fa;
 $grey-6: #ebeef7;
+
+$box-shadow-sm: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
+$box-shadow-md: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
+$box-shadow-lg: 0px 10px 15px rgba(0, 0, 0, 0.1),
+  0px 4px 6px rgba(0, 0, 0, 0.05);
+$box-shadow-xl: 0px 20px 25px rgba(0, 0, 0, 0.1),
+  0px 10px 10px rgba(0, 0, 0, 0.04);
+$box-shadow-2xl: 0px 25px 50px rgba(0, 0, 0, 0.25);
+$box-shadow-inset: inset 0px 2px 4px rgba(0, 0, 0, 0.06);
