--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -2,19 +2,18 @@
 @use '../abstracts/mixins';
 
 .button {
-  &:not(&.active) {
+  @include mixins.input-transition;
+
+  &:not(.active) {
     @include mixins.miter(1);
   }
 
-  @include mixins.input-transition;
-
-  background-color: none;
+  background-color: transparent;
   border: none;
   border-radius: 5px;
   font-size: 14px;
   height: 36px;
   line-height: 36px;
-  overflow: hidden;
   padding: 0;
   user-select: none;
 
@@ -23,6 +22,7 @@
   }
 
   > div {
+    @include mixins.miter(1);
     border-radius: 4px !important;
 
     > span {
@@ -30,46 +30,64 @@
     }
   }
 
+  &.active {
+    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
+  }
+
   &.disabled {
     cursor: not-allowed;
+    background-color: variables.$disabled !important;
+    color: variables.$grey-4 !important;
+
+    &:not(&.outlined) > div {
+      background-color: variables.$grey-3 !important;
+    }
   }
 
   &.primary {
+    color: variables.$text--white;
+
     &.hovered > div {
       background-color: variables.$primary-101;
     }
 
     > div {
       background-color: variables.$primary-100;
-      color: variables.$text--white;
     }
   }
 
   &.secondary {
+    color: variables.$grey-1;
+
     &.hovered > div {
       background-color: variables.$grey-4;
     }
 
     > div {
       background-color: variables.$grey-3;
-      color: variables.$grey-1;
     }
   }
 
   &.outlined {
     background-color: variables.$grey-4;
+    color: variables.$grey-1;
+    transition: background-color 0s, clip-path 0s !important;
+
+    &:active {
+      background-color: transparent;
+    }
+
+    &:not(.active) {
+      @include mixins.miter(1);
+    }
 
     &.hovered > div {
       background-color: variables.$grey-5;
     }
 
-    &:not(&.active) > div {
-      @include mixins.miter(1, true);
-    }
-
     > div {
+      @include mixins.miter(1, true);
       background-color: variables.$white;
-      color: variables.$grey-1;
       height: calc(100% - 2px);
       position: relative;
       top: 0;
