--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -20,6 +20,8 @@ h4,
 h5,
 h6 {
   font-family: variables.$font--primary !important;
+  margin-block-start: 0.1em;
+  margin-block-end: 0.1em;
 }
 
 h1 {
