--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -54,6 +54,22 @@ h5 {
   line-height: 24px;
 }
 
+.font-weight-light {
+  font-weight: 100;
+}
+
+.text-caption-1 {
+  font-size: 13px;
+  letter-spacing: -0.09px;
+  line-height: 18px;
+}
+
+.text-caption-2 {
+  font-size: 11px;
+  letter-spacing: -0.09px;
+  line-height: 15px;
+}
+
 .text-capitalize {
   text-transform: capitalize;
 }
