Rollup config is working, remove alias in template tags for now

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,9 @@
 @use 'base/spacing';
 @use 'base/colors';
 
+// @use 'components/button.scss';
+// @use 'components/card.scss';
+// @use 'components/card-actions.scss';
+// @use 'components/card-header.scss';
+
 @use 'vendors/normalize';
