Import fonts in main scss file

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,9 +7,8 @@
 @use 'base/spacing';
 @use 'base/colors';
 
-// @use 'components/button.scss';
-// @use 'components/card.scss';
-// @use 'components/card-actions.scss';
-// @use 'components/card-header.scss';
-
 @use 'vendors/normalize';
+
+@import 'https://use.typekit.net/kuq1xhl.css';
+@import 'https://fonts.googleapis.com/css?family=Barlow';
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
