Make sure links inherit color

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -52,6 +52,7 @@ $text-alignments: 'left', 'center', 'right', 'end', 'justify', 'start',
 }
 
 a {
+  color: inherit !important;
   cursor: pointer;
   text-decoration: underline;
 }
