--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -5,6 +5,30 @@
   color: variables.$primary-100;
 }
 
+.text--grey-1 {
+  color: variables.$grey-1;
+}
+
+.text--grey-2 {
+  color: variables.$grey-2;
+}
+
+.text--grey-3 {
+  color: variables.$grey-3;
+}
+
+.text--grey-4 {
+  color: variables.$grey-4;
+}
+
+.text--grey-5 {
+  color: variables.$grey-5;
+}
+
+.text--grey-6 {
+  color: variables.$grey-6;
+}
+
 .grey-1 {
   background-color: variables.$grey-1;
 }
