Use sections instead of div, add tests for rendering in each card section

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -12,7 +12,7 @@
   padding: 1px;
   position: relative;
 
-  > div {
+  > section {
     @include mixins.miter(2, true);
     background-color: variables.$white;
     border-radius: 3px;
