--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -21,5 +21,12 @@
     align-content: flex-start;
     justify-content: flex-start;
     padding: 32px;
+
+    > main {
+      display: flex;
+      flex-direction: column;
+      align-content: flex-start;
+      justify-content: flex-start;
+    }
   }
 }
