--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -14,19 +14,20 @@
 
   > section {
     @include mixins.miter(2, true);
+    align-content: flex-start;
     background-color: variables.$white;
     border-radius: 3px;
     display: flex;
-    flex-direction: column;
-    align-content: flex-start;
+    flex-direction: row;
     justify-content: flex-start;
     padding: 32px;
 
-    > main {
+    > section > main {
+      align-content: flex-start;
       display: flex;
       flex-direction: column;
-      align-content: flex-start;
       justify-content: flex-start;
+      overflow: scroll;
     }
   }
 }
