--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -22,7 +22,7 @@
     justify-content: flex-start;
     padding: 32px;
 
-    > section > main {
+    > section > article {
       align-content: flex-start;
       display: flex;
       flex-direction: column;
