--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -42,6 +42,8 @@ $grey-4: #cecdd3;
 $grey-5: #f7f8fa;
 $grey-6: #ebeef7;
 
+$black-40: #cacccf;
+
 $box-shadow-sm: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
 $box-shadow-md: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
 $box-shadow-lg: 0px 10px 15px rgba(0, 0, 0, 0.1),
