--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -4,26 +4,15 @@
 .slider {
   @include mixins.input-transition;
 
-  &:not(.active):not(.icon) {
-    @include mixins.miter(1);
-  }
-
-  background-color: transparent;
-  border: none;
-  border-radius: 5px;
-  font-size: 14px;
-  height: 36px;
-  line-height: 36px;
-  padding: 0;
-  user-select: none;
+  width: 50%; /* Full-width */
+  height: 4px; /* Specified height */
+  outline: none; /* Remove outline */
+  
 
   &:focus-visible {
     outline: none;
   }
 
-  &:not(.icon) > div {
-    @include mixins.miter(1);
-  }
 
   > div {
     @include mixins.input-transition;
@@ -37,33 +26,8 @@
     }
   }
 
-  &.icon {
-    border-radius: 50%;
-    height: 60px;
-    line-height: 60px;
-    overflow: hidden;
-    width: 60px;
-
-    > div {
-      border-radius: 50%;
-      height: calc(100% - 2px);
-      width: calc(100% - 2px);
-      top: 1px;
-      left: 1px;
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-    i {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-
   &.active {
-    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
+    // filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
   }
 
   &.disabled {
@@ -71,24 +35,16 @@
     background-color: variables.$disabled !important;
     color: variables.$grey-4 !important;
 
-    &:not(.outlined) > div {
+    > div {
       background-color: variables.$grey-3 !important;
     }
   }
 
-  &.primary {
-    color: variables.$text--white;
+  
+   
 
-    &.hovered > div {
-      background-color: variables.$primary-101;
-    }
 
-    > div {
-      background-color: variables.$primary-100;
-    }
-  }
-
-  &.secondary {
+  &.default {
     color: variables.$grey-1;
 
     &.hovered > div {
@@ -100,34 +56,14 @@
     }
   }
 
-  &.outlined {
-    background-color: variables.$grey-4;
-    color: variables.$grey-1;
-    transition: background-color 0s, clip-path 0s !important;
-
-    &:active {
-      background-color: transparent;
-    }
-
-    &:not(.active):not(.icon) {
-      @include mixins.miter(1);
-    }
+  
 
     &.hovered > div {
       background-color: variables.$grey-5;
     }
 
-    &:not(.icon) > div {
-      @include mixins.miter(1, true);
-    }
+    
 
-    > div {
-      background-color: variables.$white;
-      height: calc(100% - 2px);
-
-      top: 0;
-      left: 1px;
-      width: calc(100% - 2px);
-    }
-  }
+    
+  
 }
