--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -3,16 +3,23 @@
 
 .slider {
   @include mixins.input-transition;
-
-  width: 50%; /* Full-width */
-  height: 4px; /* Specified height */
-  outline: none; /* Remove outline */
+  width: 320px;
+  height: 4px; 
+  outline: none; 
+  background-color: variables.$primary !important;
+  -webkit-appearance: none;
   
-
-  &:focus-visible {
-    outline: none;
-  }
-
+&::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  cursor: pointer;
+  background: variables.$primary !important;
+  
+  
+  
+}
 
   > div {
     @include mixins.input-transition;
@@ -20,50 +27,40 @@
     padding-left: 32px;
     padding-right: 32px;
     position: relative;
+    color: variables.$warning !important;
 
     > span {
       margin-right: 4px;
     }
   }
 
-  &.active {
-    // filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
-  }
 
   &.disabled {
     cursor: not-allowed;
-    background-color: variables.$disabled !important;
-    color: variables.$grey-4 !important;
+    background-color: variables.$grey-7 !important;
 
-    > div {
-      background-color: variables.$grey-3 !important;
-    }
-  }
-
-  
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        height: 14px;
+        width: 14px;
+        border-radius: 50%;
+        background: variables.$grey-7 !important;
    
-
-
-  &.default {
-    color: variables.$grey-1;
-
-    &.hovered > div {
-      background-color: variables.$grey-4;
     }
-
-    > div {
-      background-color: variables.$grey-3;
-    }
+    
   }
 
   
 
-    &.hovered > div {
-      background-color: variables.$grey-5;
-    }
+
+  
+
+    
 
     
 
     
   
 }
+
+
