try out border on slider thumb - needs refining and tracker needs editing

--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -15,7 +15,8 @@
   width: 14px;
   border-radius: 50%;
   cursor: pointer;
-  background: variables.$primary !important;
+  border: solid 2px;
+  border-color: variables.$primary !important;
   
   
   
