--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -27,7 +27,7 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      overflow: scroll;
+      overflow: auto;
     }
   }
 }
