--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -5,18 +5,22 @@
   display: inline-flex;
   font-size: 15px;
   line-height: 20px;
+  position: absolute;
 
   > input {
+    position: absolute;
     height: 0;
     width: 0;
   }
   .box {
+    background-color: variables.$white;
     border: 1px solid variables.$grey-4;
     border-radius: 4px;
     display: inline-block;
     height: 28px;
     margin-right: 12px;
     width: 28px;
+    z-index: 1;
   }
   .material-icons {
     color: variables.$white;
