--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 
 @use 'vendors/normalize';
 
+@import '../assets/fonts/style.css';
 @import 'https://use.typekit.net/kuq1xhl.css';
 @import 'https://fonts.googleapis.com/css?family=Barlow';
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
