Update tab spec and add basic classes

--- a/src/styles/components/tab.scss
+++ b/src/styles/components/tab.scss
@@ -2,4 +2,12 @@ button {
   &.active {
     color: red;
   }
+
+  &.focused {
+    color: green;
+  }
+
+  &.hovered {
+    background-color: antiquewhite;
+  }
 }
