--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -2,18 +2,14 @@
 @use '../abstracts/mixins';
 
 @mixin slider-thumb($disabled) {
-    height: 14px;
-    width: 14px;
     border-radius: 50%;
     border: solid 2px;
     background-color: variables.$background;
     @if($disabled) {
         border-color: variables.$grey-7;
-        cursor: not-allowed;
     }
     @else {
         border-color: variables.$primary;
-        cursor: pointer;
     }
     
 }
@@ -24,29 +20,71 @@
   width: 320px;
   height: 4px; 
   outline: none; 
+  cursor: pointer;
 -webkit-appearance: none;
   background: linear-gradient(to right, variables.$primary var(--slider-val), variables.$grey-7 0);
 
 
 &::-webkit-slider-thumb {
   -webkit-appearance: none;
+    height: 14px;
+    width: 14px;
   @include slider-thumb($disabled: false)
 }
 
 &::-moz-range-thumb {
+    height: 10px;
+    width: 10px;
     @include slider-thumb($disabled: false)
   }
 
 &::-ms-thumb {
+    height: 10px;
+    width: 10px;
     @include slider-thumb($disabled: false)
 }
 
   &.disabled {
     background: variables.$grey-7;
+    cursor: not-allowed;
 
 &::-webkit-slider-thumb {
         -webkit-appearance: none;
         @include slider-thumb($disabled: true)
+    }
+
+    &::-moz-range-thumb {
+        @include slider-thumb($disabled: true)
+      }
+    
+    &::-ms-thumb {
+        @include slider-thumb($disabled: true)
+    }
+  }  
+  &.active {
+
+&::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        // @include slider-thumb($disabled: true);
+        height: 18px;
+        width: 18px;
+        border: 2px solid variables.$grey-4;
+        box-shadow: inset 0 0 0 2px variables.$primary;
+        
+    }
+
+    &::-moz-range-thumb {
+        height: 14px;
+        width: 14px;
+        // @include slider-thumb($disabled: true)
+        border: 2px solid variables.$grey-4;
+        box-shadow: inset 0 0 0 2px variables.$primary;
+      }
+    
+    &::-ms-thumb {
+        // @include slider-thumb($disabled: true)
+        border: 2px solid variables.$grey-4;
+        box-shadow: inset 0 0 0 2px variables.$primary;
     }
   }  
 }
