--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -5,16 +5,17 @@
   @include mixins.input-transition;
   align-items: center;
   border: 1px;
+  cursor: pointer;
   display: inline-flex;
   font-size: 15px;
   line-height: 20px;
   position: absolute;
 
   > input {
+    margin-left: 6px;
     position: absolute;
     height: 0;
     width: 0;
-    margin-left: 6px;
   }
   .box {
     background-color: variables.$white;
@@ -23,6 +24,7 @@
     display: inline-block;
     height: 28px;
     margin-right: 12px;
+    user-select: none;
     width: 28px;
     z-index: 1;
   }
@@ -44,14 +46,13 @@
     cursor: not-allowed;
     color: variables.$black-40 !important;
     .box {
-      background-color: variables.$grey-4;
+      background-color: variables.$grey-4 !important;
     }
   }
 
   &:focus,
   &.hovered,
   &.active {
-    cursor: pointer;
     .box {
       background-color: variables.$grey-5;
     }
