--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -24,19 +24,23 @@
     padding-right: 22px;
   }
 
-  &.selected {
-    background-color: variables.$grey-4;
-    color: variables.$grey-1;
+  &:not(.selected) {
+    background-color: variables.$white;
+    color: variables.$white;
     transition: background-color 0s, clip-path 0s !important;
 
-    @include mixins.miter(1, true);
+    &:not(.icon) > div {
+      @include mixins.miter(1, true);
+    }
+
     > div {
       background-color: variables.$white;
+      height: calc(100% - 1px);
 
       top: 1px;
       left: 1px;
       border: solid 1px;
-      height: calc(100% - 1px);
+      // width: calc(100% - 2px);
     }
   }
 
@@ -48,36 +52,33 @@
     background-color: variables.$grey-3 !important;
   }
 
-  &.icon {
-    > div {
-      padding: 0;
-    }
-  }
-
   &.primary {
     background-color: variables.$primary;
-    color: variables.$primary;
+
+    color: variables.$text--white;
     &:not(.selected) {
       background-color: variables.$primary;
-      color: variables.$text--white;
+      color: variables.$primary;
     }
   }
 
   &.secondary {
     background-color: variables.$success;
-    color: variables.$success;
+    color: variables.$text--white;
+
     &:not(.selected) {
       background-color: variables.$success;
-      color: variables.$text--white;
+      color: variables.$success;
     }
   }
 
   &.default {
     background-color: variables.$grey-2;
-    color: variables.$grey-2;
+    color: variables.$text--white;
+
     &:not(.selected) {
       background-color: variables.$grey-2;
-      color: variables.$text--white;
+      color: variables.$grey-2;
     }
   }
 }
