wip- icon tag styling

--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -7,6 +7,7 @@
   &:not(.icon) {
     @include mixins.miter(1);
   }
+
   background-color: transparent;
   border: none;
   border-radius: 5px;
@@ -16,6 +17,10 @@
   padding: 0;
   user-select: none;
   display: inline-block;
+
+  &:not(.icon) > div {
+    @include mixins.miter(1);
+  }
 
   > div {
     @include mixins.input-transition;
@@ -41,6 +46,27 @@
       left: 1px;
       border: solid 1px;
       // width: calc(100% - 2px);
+    }
+  }
+
+  &.icon {
+    border-radius: 50%;
+    height: 20px;
+    line-height: 20px;
+    overflow: hidden;
+    width: 20px;
+
+    > div {
+      border-radius: 50%;
+      height: calc(100% - 0px);
+      width: calc(100% - 0px);
+      padding: 0;
+    }
+
+    i {
+      // border: solid;
+      margin-left: 2px;
+      margin-top: 2px;
     }
   }
 
