wip - add tests to check default slot and color prop

--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
-.chip {
+.tag {
   @include mixins.input-transition;
 
   &:not(.icon) {
