--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -11,8 +11,9 @@
   background-color: variables.$primary;
   border: none;
   border-radius: 4px;
-  font-size: 11px;
+  font-size: 14px;
   height: 26px;
+  line-height: 26px;
   padding: 0;
   user-select: none;
   display: inline-block;
