--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -41,11 +41,21 @@
     }
   }
 
+  &.active {
+    filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.5));
+  }
+
   &:not(.selected) {
     background-color: variables.$white;
     color: variables.$white;
     transition: background-color 0s, clip-path 0s !important;
 
+    &:not(.active):not(.icon) {
+      @include mixins.miter(1);
+    }
+    &:active {
+      background-color: transparent;
+    }
     > div {
       position: relative;
       background-color: variables.$white;
