add styling for disabled selected

--- a/src/styles/components/radio.scss
+++ b/src/styles/components/radio.scss
@@ -54,6 +54,14 @@
     }
   }
 
+  &.disabled input:checked ~ .radio-button {
+    border: 2px solid variables.$inactive;
+    background: white;
+    &:after {
+      background: variables.$inactive;
+    }
+  }
+
   &:focus,
   &.hovered,
   &.active {
