--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -2,61 +2,41 @@
 @use '../abstracts/mixins';
 
 .tag {
-  @include mixins.input-transition;
-
-  &:not(.icon) {
-    @include mixins.miter(1);
-  }
-
-  background-color: variables.$primary;
+  @include mixins.miter(1);
   border: none;
   border-radius: 4px;
-  font-size: 14px;
-  height: 26px;
-  line-height: 26px;
   padding: 0;
   user-select: none;
-  display: inline-block;
   white-space: nowrap;
+  cursor: default;
+  display: inline-block;
+  overflow: hidden;
+  height: 26px;
   cursor: default;
 
   &:focus-visible {
     outline: none;
   }
 
-  &:not(.icon) > div {
-    @include mixins.miter(1);
-  }
-
   > div {
-    @include mixins.input-transition;
-    border-radius: 3px;
     padding-left: 23px;
     padding-right: 23px;
 
+    border-radius: 4px;
+
     > span {
-      display: flex;
+      display: inline-flex;
       align-items: center;
-      justify-content: center;
     }
   }
 
-  &.active {
-    filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.5));
-  }
-
-  &:not(.selected) {
-    background-color: variables.$white;
-    color: variables.$white;
+  &.outlined {
+    background-color: variables.$grey-2;
+    color: variables.$grey-2;
     transition: background-color 0s, clip-path 0s !important;
 
-    &:not(.active):not(.icon) {
-      @include mixins.miter(1);
-    }
-    &:active {
-      background-color: transparent;
-    }
     > div {
+      @include mixins.miter(1, true);
       position: relative;
       background-color: variables.$white;
 
@@ -67,80 +47,33 @@
     }
   }
 
-  &.icon {
-    border-radius: 50%;
-    height: 30px;
-    line-height: 30px;
-    overflow: hidden;
-    width: 30px;
-
-    > div {
-      border-radius: 50%;
-      height: calc(100% - 2px);
-      width: calc(100% - 2px);
-      top: 1px;
-      left: 1px;
-      padding-left: 0;
-      padding-right: 0;
-
-      position: relative;
-    }
-
-    i {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-
   &.disabled {
     cursor: not-allowed;
     background-color: variables.$disabled !important;
     color: variables.$grey-4 !important;
 
-    background-color: variables.$grey-4 !important;
+    &.outlined {
+      background-color: variables.$grey-4 !important;
+    }
   }
 
   &.primary {
     background-color: variables.$primary;
-    color: variables.$text--white;
+    color: variables.$primary;
 
-    &:not(.selected) {
+    &:not(.outlined) {
       background-color: variables.$primary;
-      color: variables.$primary;
-
-      &.hovered > div {
-        background-color: variables.$grey-5;
-      }
+      color: variables.$text--white;
     }
   }
 
   &.secondary {
     background-color: variables.$success;
-    color: variables.$text--white;
+    color: variables.$success;
 
-    &:not(.selected) {
+    &:not(.outlined) {
       background-color: variables.$success;
-      color: variables.$success;
-
-      &.hovered > div {
-        background-color: variables.$grey-5;
-      }
-    }
-  }
-
-  &.default {
-    background-color: variables.$grey-2;
-    color: variables.$text--white;
-
-    &:not(.selected) {
-      background-color: variables.$grey-2;
-      color: variables.$grey-2;
-
-      &.hovered > div {
-        background-color: variables.$grey-5;
-      }
+      color: variables.$text--white;
     }
   }
 }
