make default background color to be grey

--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -14,6 +14,9 @@
   height: 26px;
   cursor: default;
 
+  background-color: variables.$grey-2;
+  color: variables.$text--white;
+
   &:focus-visible {
     outline: none;
   }
