--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -4,7 +4,7 @@
 .tag {
   @include mixins.miter(1);
   border: none;
-  border-radius: 4px;
+  border-radius: 3px;
   padding: 0;
   user-select: none;
   white-space: nowrap;
@@ -13,6 +13,7 @@
   overflow: hidden;
   height: 26px;
   cursor: default;
+  font-size: 11px;
 
   background-color: variables.$grey-2;
   color: variables.$text--white;
@@ -24,12 +25,12 @@
   > div {
     padding-left: 23px;
     padding-right: 23px;
-
-    border-radius: 4px;
+    border-radius: 2px;
 
     > span {
       display: inline-flex;
       align-items: center;
+      vertical-align: middle;
     }
   }
 
